// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useSubscriptionModal BillingInfo 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    />
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--padding-bottom-large"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-small"
          data-icon="ff-solid"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 32 32"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ff-solid_svg__a"
              x1="6.837"
              x2="23.78"
              y1="2"
              y2="28.227"
            >
              <stop
                offset="0"
                stop-color="#ffc100"
              />
              <stop
                offset="1"
                stop-color="#e66b35"
              />
            </lineargradient>
            <g
              fill="url(#ff-solid_svg__a)"
            >
              <path
                d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.463 1.316a.2.2 0 00.208-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.398 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012z"
              />
              <path
                d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.265.902z"
              />
            </g>
          </svg>
        </span>
        common.purpose.cf.continuous common.plans.subscription
      </p>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotSuccess MultiStepProgressIndicator--spacing"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--statusBar"
          >
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--fullBar"
            />
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--barSuccess MultiStepProgressIndicator--fullBar"
            />
          </div>
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotSuccess MultiStepProgressIndicator--spacing"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--statusBar"
          >
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--fullBar"
            />
          </div>
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotOutLine MultiStepProgressIndicator--spacing"
          />
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--font-variation-h3"
      >
        authSettings.billing.step
      </p>
    </div>
    <div
      class="Layout--horizontal StyledProps--main footer"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-left StyledProps--main"
            icon="chevron-left"
          >
            <svg
              data-icon="chevron-left"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-left
              </desc>
              <path
                d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            back
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withRightIcon Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            authSettings.billing.next
          </span>
          <span
            class="bp3-icon bp3-icon-chevron-right StyledProps--main"
            icon="chevron-right"
          >
            <svg
              data-icon="chevron-right"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-right
              </desc>
              <path
                d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main"
        >
          authSettings.costCalculator.payingToday common.perMonth
        </p>
        <p
          class="StyledProps--font StyledProps--main"
        >
          authSettings.plusTax
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`useSubscriptionModal FinalReview 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    />
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--padding-bottom-large"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-small"
          data-icon="ff-solid"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 32 32"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ff-solid_svg__a"
              x1="6.837"
              x2="23.78"
              y1="2"
              y2="28.227"
            >
              <stop
                offset="0"
                stop-color="#ffc100"
              />
              <stop
                offset="1"
                stop-color="#e66b35"
              />
            </lineargradient>
            <g
              fill="url(#ff-solid_svg__a)"
            >
              <path
                d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.463 1.316a.2.2 0 00.208-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.398 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012z"
              />
              <path
                d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.265.902z"
              />
            </g>
          </svg>
        </span>
        common.purpose.cf.continuous common.plans.subscription
      </p>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotSuccess MultiStepProgressIndicator--spacing"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--statusBar"
          >
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--fullBar"
            />
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--barSuccess MultiStepProgressIndicator--fullBar"
            />
          </div>
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotSuccess MultiStepProgressIndicator--spacing"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--statusBar"
          >
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--fullBar"
            />
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--barSuccess MultiStepProgressIndicator--fullBar"
            />
          </div>
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotSuccess MultiStepProgressIndicator--spacing"
          />
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--font-variation-h3"
      >
        authSettings.finalReview.step
      </p>
    </div>
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
        >
          authSettings.costCalculator.newSubscription
        </p>
        <p
          class="StyledProps--font StyledProps--main newPlan StyledProps--font-weight-bold StyledProps--font-size-xsmall StyledProps--color StyledProps--color-white StyledProps--border"
        >
          TEAM
        </p>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-alignItems-start"
        >
          <p
            class="StyledProps--font StyledProps--main lineItem StyledProps--font-weight-semi-bold"
          >
            authSettings.costCalculator.developerLicenses
          </p>
          <div
            class="lineItem"
          >
             
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.unitPrice
              common.perMonth
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--padding-right-xlarge"
          >
            $0.00
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-alignItems-start"
        >
          <p
            class="StyledProps--font StyledProps--main lineItem StyledProps--font-weight-semi-bold"
          >
            authSettings.costCalculator.maus
          </p>
          <div
            class="lineItem"
          >
             
            <div
              class="Layout--vertical StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                authSettings.unitPrice
                common.perMonth
              </p>
              <p
                class="StyledProps--font StyledProps--main"
              >
                authSettings.firstIncludedFree
              </p>
            </div>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--padding-right-xlarge"
          >
            $0.00
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-alignItems-start"
        >
          <p
            class="StyledProps--font StyledProps--main lineItem StyledProps--font-weight-semi-bold"
          >
            authSettings.costCalculator.support
          </p>
          <div
            class="lineItem"
          >
             
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                authSettings.finalReview.premiumSupport
              </p>
              <p
                class="StyledProps--font StyledProps--main"
              >
                authSettings.finalReview.ofTotalSpend
              </p>
            </div>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--padding-right-xlarge"
          >
            $0.00
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-alignItems-start"
        >
          <p
            class="StyledProps--font StyledProps--main lineItem StyledProps--font-weight-semi-bold"
          >
            authSettings.costCalculator.tax
          </p>
          <div
            class="lineItem"
          >
             
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--padding-right-xlarge"
          >
            $0.00
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main line StyledProps--flex StyledProps--flex-alignItems-start"
        >
          <p
            class="StyledProps--font StyledProps--main lineItem StyledProps--font-weight-semi-bold"
          >
            authSettings.yearlySubscriptionTotal
          </p>
          <div
            class="lineItem"
          >
             
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.autoRenew
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-weight-semi-bold StyledProps--padding-right-xlarge"
          >
            $0.00
          </p>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main payingToday StyledProps--flex StyledProps--flex-justifyContent-space-between"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
        >
          authSettings.costCalculator.payingToday
        </p>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
        >
          $0.00
        </p>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main footer"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-secondary"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-left StyledProps--main"
            icon="chevron-left"
          >
            <svg
              data-icon="chevron-left"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-left
              </desc>
              <path
                d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            back
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            authSettings.billing.subscribeNPay
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`useSubscriptionModal Success 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    />
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-large"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h3"
    >
      authSettings.success.title
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h5"
    >
      authSettings.success.msg
    </p>
  </div>
</div>
`;

exports[`useSubscriptionModal render 1`] = `
<div
  class="bp3-dialog dialog bp3-dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    />
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-h4 StyledProps--padding-bottom-large"
        style="display: flex; align-items: center;"
      >
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-right-small"
          data-icon="ff-solid"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 32 32"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="ff-solid_svg__a"
              x1="6.837"
              x2="23.78"
              y1="2"
              y2="28.227"
            >
              <stop
                offset="0"
                stop-color="#ffc100"
              />
              <stop
                offset="1"
                stop-color="#e66b35"
              />
            </lineargradient>
            <g
              fill="url(#ff-solid_svg__a)"
            >
              <path
                d="M10.632 2.08A5.19 5.19 0 004.62 6.29L2.08 20.697a5.19 5.19 0 004.21 6.012l7.463 1.316a.2.2 0 00.208-.298L6.882 15.656c-.296-.469-.292-1.382.05-1.6.08-.05.313-.259.313-.259l.398-.436.066-.072c.37-.406.704-.773 1.76-1.302l.227-.079c1.548-.484 2.41-.449 3.27-.414.862.035 1.724.07 3.274-.414 1.272-.398 2.43-1.178 3.074-1.667a.622.622 0 01.9.15l4.596 7.362a.53.53 0 01-.101.696 8.694 8.694 0 01-2.834 1.538c-1.549.484-2.432.463-3.316.442-.884-.021-1.768-.042-3.318.442-1.314.41-1.868.948-2.07 1.204-.048.061-.07.21-.032.279.4.724 2.295 4.06 3.794 6.693a.998.998 0 00.695.49l3.07.541a5.19 5.19 0 006.012-4.21l2.54-14.408a5.19 5.19 0 00-4.21-6.012z"
              />
              <path
                d="M16.646 13.074c-1.303.34-2.093.316-2.882.29-.79-.024-1.58-.049-2.881.291-.744.216-1.178.592-1.587 1.072a.197.197 0 00-.018.23l2.482 4.069c.064.106.209.13.307.055.374-.283 1.28-.9 2.42-1.198 1.469-.383 2.348-.375 3.273-.366.717.007 1.462.014 2.53-.16a4.454 4.454 0 001.629-.635.347.347 0 00.094-.488L19.472 12.3a.421.421 0 00-.56-.128 9.57 9.57 0 01-2.265.902z"
              />
            </g>
          </svg>
        </span>
        common.purpose.cf.continuous common.plans.subscription
      </p>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotSuccess MultiStepProgressIndicator--spacing"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--statusBar"
          >
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--fullBar"
            />
          </div>
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotOutLine MultiStepProgressIndicator--spacing"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex"
        >
          <div
            class="MultiStepProgressIndicator--statusBar"
          >
            <div
              class="MultiStepProgressIndicator--bar MultiStepProgressIndicator--fullBar"
            />
          </div>
          <div
            class="MultiStepProgressIndicator--dot MultiStepProgressIndicator--dotOutLine MultiStepProgressIndicator--spacing"
          />
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--font-variation-h3"
      >
        authSettings.costCalculator.step
      </p>
    </div>
    <div
      class="Layout--vertical StyledProps--main body StyledProps--padding-top-large StyledProps--padding-bottom-large"
    >
      <div
        class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-left StyledProps--padding-bottom-large"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-right-small StyledProps--font-variation-body1 StyledProps--font-weight-bold"
          >
            authSettings.costCalculator.currentSubscription
          </p>
          <p
            class="StyledProps--font StyledProps--main currentPlan StyledProps--font-weight-bold StyledProps--font-size-xsmall StyledProps--color StyledProps--color-white StyledProps--border"
          >
            FREE
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main"
            style="width: 50%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--padding-bottom-medium"
            >
              authSettings.costCalculator.developerLicenses
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-right-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small"
                >
                  common.subscribed
                </p>
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                  >
                    250
                  </p>
                  <span
                    class="Tag--main"
                  >
                    <span
                      class="bp3-tag bp3-round includedFree"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        authSettings.costCalculator.includedFree
                      </span>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-right-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small"
                >
                  authSettings.costCalculator.using
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                >
                  20
                </p>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small"
                >
                  common.recommended
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                >
                  250
                </p>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical StyledProps--main"
            style="width: 50%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold StyledProps--padding-bottom-medium"
            >
              authSettings.costCalculator.maus
            </p>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start"
            >
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-right-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small"
                >
                  common.subscribed
                </p>
                <div
                  class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
                >
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                  >
                    100k
                  </p>
                  <span
                    class="Tag--main"
                  >
                    <span
                      class="bp3-tag bp3-round includedFree"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        authSettings.costCalculator.includedFree
                      </span>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main StyledProps--padding-right-large"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small"
                >
                  authSettings.costCalculator.using
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                >
                  10k
                </p>
              </div>
              <div
                class="Layout--vertical StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--padding-bottom-small"
                >
                  common.recommended
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                >
                  100k
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main newSubscription StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--vertical StyledProps--main StyledProps--padding-bottom-large"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--padding-top-large StyledProps--padding-bottom-medium"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--padding-right-small StyledProps--font-variation-body1 StyledProps--font-weight-bold"
            >
              authSettings.costCalculator.newSubscription
            </p>
            <p
              class="StyledProps--font StyledProps--main newPlan StyledProps--font-weight-bold StyledProps--font-size-xsmall StyledProps--color StyledProps--color-white StyledProps--border"
            >
              TEAM
            </p>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
          >
            <div
              class="PillToggle--optionBtns"
            >
              <div
                class="PillToggle--item PillToggle--selected"
                data-name="toggle-option-one"
                role="button"
                tabindex="0"
              >
                Team
              </div>
              <div
                class="PillToggle--item"
                data-name="toggle-option-two"
                role="button"
                tabindex="0"
              >
                Enterprise
              </div>
            </div>
            <a
              href="/account/undefined/settings/subscriptions?moduleCard=cf&&tab=PLANS"
              target="_blank"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-size-xsmall"
              >
                authSettings.costCalculator.comparePlans
              </p>
            </a>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
            style="width: 50%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
            >
              authSettings.costCalculator.developerLicenses
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
            >
              <div
                class="bp3-slider slider"
              >
                <div
                  class="bp3-slider-track"
                >
                  <div
                    class="bp3-slider-progress"
                    style="left: 0.00%; right: 100.00%; top: 0px;"
                  />
                  <div
                    class="bp3-slider-progress bp3-intent-primary"
                    style="left: 0.00%; right: 60.00%; top: 0px;"
                  />
                  <div
                    class="bp3-slider-progress"
                    style="left: 40.00%; right: 0.00%; top: 0px;"
                  />
                </div>
                <div
                  class="bp3-slider-axis"
                >
                  <div
                    class="bp3-slider-label"
                    style="left: 0.00%;"
                  >
                    0
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 20.00%;"
                  >
                    10
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 40.00%;"
                  >
                    20
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 60.00%;"
                  >
                    30
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 80.00%;"
                  >
                    40
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 100.00%;"
                  >
                    50
                  </div>
                </div>
                <span
                  class="bp3-slider-handle"
                  style="left: calc(40.00% - 0px);"
                  tabindex="0"
                >
                  <span
                    class="bp3-slider-label"
                  >
                    20
                  </span>
                </span>
              </div>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group textInput"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="20"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--vertical StyledProps--main StyledProps--padding-right-xlarge"
            style="width: 50%;"
          >
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-start"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-weight-bold"
              >
                authSettings.costCalculator.maus
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-small"
              >
                , 
                100
                K
                 
                authSettings.costCalculator.increments
              </p>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
            >
              <div
                class="bp3-slider slider"
              >
                <div
                  class="bp3-slider-track"
                >
                  <div
                    class="bp3-slider-progress"
                    style="left: 0.00%; right: 100.00%; top: 0px;"
                  />
                  <div
                    class="bp3-slider-progress bp3-intent-primary"
                    style="left: 0.00%; right: 0.00%; top: 0px;"
                  />
                  <div
                    class="bp3-slider-progress"
                    style="left: 100.00%; right: 0.00%; top: 0px;"
                  />
                </div>
                <div
                  class="bp3-slider-axis"
                >
                  <div
                    class="bp3-slider-label"
                    style="left: 0.00%;"
                  >
                    0
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 20.00%;"
                  >
                    100
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 40.00%;"
                  >
                    200
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 60.00%;"
                  >
                    300
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 80.00%;"
                  >
                    400
                  </div>
                  <div
                    class="bp3-slider-label"
                    style="left: 100.00%;"
                  >
                    500
                  </div>
                </div>
                <span
                  class="bp3-slider-handle"
                  style="left: calc(2000.00% - 0px);"
                  tabindex="0"
                >
                  <span
                    class="bp3-slider-label"
                  >
                    10000
                  </span>
                </span>
              </div>
              <div
                class="bp3-popover-wrapper DropDown--main dropdown"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--withBorder StyledProps--flex"
                      data-testid="slider-dropdown"
                      style="width: 70px;"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                      >
                        <p
                          class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                          data-testid="dropdown-value"
                          style="--text-line-clamp: 1;"
                        >
                            K
                        </p>
                      </div>
                      <div
                        class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                          data-icon="main-chevron-down"
                        >
                          <svg
                            height="8"
                            viewBox="0 0 14 8"
                            width="8"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                              fill="#4d5969"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--padding-bottom-large"
      >
        <div
          class="Layout--vertical StyledProps--main billingHeader StyledProps--padding-top-large StyledProps--padding-bottom-large"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-bottom-large StyledProps--font-variation-body1 StyledProps--font-weight-bold"
          >
            common.subscriptions.tabs.billing
          </p>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-start"
          >
            <div
              class="PillToggle--optionBtns"
            >
              <div
                class="PillToggle--item"
                data-name="toggle-option-one"
                role="button"
                tabindex="0"
              >
                Yearly
              </div>
              <div
                class="PillToggle--item PillToggle--selected"
                data-name="toggle-option-two"
                role="button"
                tabindex="0"
              >
                Monthly
              </div>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-small StyledProps--padding-left-small"
              style="display: flex; align-items: center;"
            >
              <span
                class="bp3-icon bp3-icon-dollar StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green700"
                icon="dollar"
              >
                <svg
                  data-icon="dollar"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    dollar
                  </desc>
                  <path
                    d="M12.83 9.51c-.1-.3-.25-.58-.45-.84s-.45-.49-.75-.7c-.3-.2-.65-.36-1.05-.48-.16-.04-.43-.11-.8-.2-.35-.09-.73-.18-1.12-.28-.39-.1-.74-.19-1.06-.27-.31-.08-.49-.12-.54-.13-.43-.12-.78-.29-1.05-.52-.27-.23-.4-.55-.4-.95 0-.29.07-.53.21-.72.14-.19.32-.34.54-.46.22-.11.46-.19.72-.24.26-.05.52-.08.77-.08.74 0 1.35.15 1.83.46.48.3.75.83.81 1.56h2.14c0-.6-.13-1.13-.38-1.58-.25-.45-.59-.84-1.02-1.15-.43-.31-.93-.54-1.49-.7-.24-.06-.49-.1-.75-.14V1c0-.55-.45-1-1-1s-1 .45-1 1v1.08c-.23.03-.46.07-.68.13-.54.13-1.02.34-1.44.61-.42.28-.76.63-1.02 1.05-.26.43-.39.93-.39 1.5 0 .3.04.59.13.88.09.29.23.56.44.82.21.26.48.49.83.7.35.21.79.38 1.31.51.85.21 1.56.38 2.14.52.58.13 1.08.28 1.52.42.25.09.48.23.69.44.21.21.32.53.32.97 0 .21-.05.42-.14.63-.09.21-.24.39-.45.55-.21.16-.47.29-.81.39-.33.1-.73.15-1.2.15-.43 0-.84-.05-1.21-.14-.37-.09-.7-.24-.99-.43-.29-.2-.51-.45-.67-.76-.16-.31-.24-.68-.24-1.12H3c.01.71.15 1.32.43 1.84.27.52.64.94 1.1 1.27.46.33.99.58 1.61.74.27.07.56.12.85.16V15c0 .55.45 1 1 1s1-.45 1-1v-1.05c.3-.03.61-.08.9-.15.58-.13 1.1-.34 1.56-.63.46-.29.83-.66 1.11-1.11.28-.45.42-1 .42-1.64 0-.31-.05-.61-.15-.91z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              authSettings.costCalculator.yearlySave
            </p>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main equation StyledProps--flex StyledProps--flex-alignItems-start StyledProps--flex-justifyContent-left"
        >
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.developerLicenses common.subtotal
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium"
            >
              common.perMonth
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.billedAnnually
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.unitPrice common.perMonth
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-right-large StyledProps--padding-top-medium StyledProps--font-size-large"
          >
            +
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main StyledProps--padding-right-large"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.costCalculator.maus common.subtotal
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium"
            >
              common.perMonth
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.billedAnnually
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.unitPrice common.perMonth
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.firstIncludedFree
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main StyledProps--padding-right-large StyledProps--padding-top-medium StyledProps--font-size-large"
          >
            =
          </p>
          <div
            class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              authSettings.yearlySubscriptionTotal
            </p>
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-flex-start StyledProps--flex-alignItems-baseline"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-medium"
              >
                common.perMonth
              </p>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
              >
                authSettings.plusTax
              </p>
            </div>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.billedAnnually
            </p>
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
            >
              authSettings.autoRenewal
            </p>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main premSupport"
        >
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <label
                  class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox checkbox StyledProps--main"
                >
                  <input
                    disabled=""
                    size="12"
                    tabindex="0"
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </span>
            </span>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-start StyledProps--padding-top-xsmall"
              style="width: 90%;"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-start"
                >
                  <p
                    class="StyledProps--font StyledProps--main crownLabel StyledProps--padding-bottom-xsmall StyledProps--font-variation-small"
                    style="display: flex; align-items: center;"
                  >
                    <span
                      class="bp3-icon bp3-icon-crown StyledProps--main Text--icon StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-orange700"
                      icon="crown"
                    >
                      <svg
                        data-icon="crown"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          crown
                        </desc>
                        <path
                          d="M2 6l3 2 3-4 3 4 3-2-1 6H3L2 6zm6-5a1 1 0 110 2 1 1 0 010-2zM1 3a1 1 0 110 2 1 1 0 010-2zm14 0a1 1 0 110 2 1 1 0 010-2zM3 13h10v2H3v-2z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    authSettings.costCalculator.premSupport.title
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main switchToYearly StyledProps--font-size-small StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-primary6"
                    style="display: flex; align-items: center;"
                  >
                    authSettings.costCalculator.switchToYearly
                    <span
                      class="bp3-icon bp3-icon-arrow-right StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary6"
                      icon="arrow-right"
                    >
                      <svg
                        data-icon="arrow-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          arrow-right
                        </desc>
                        <path
                          d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </p>
                </div>
                <ul
                  class="premLabel"
                >
                  <li>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
                    >
                      authSettings.costCalculator.premSupport.line1
                    </p>
                  </li>
                  <li>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
                    >
                      authSettings.costCalculator.premSupport.line2
                    </p>
                  </li>
                  <li>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
                    >
                      authSettings.costCalculator.premSupport.line3
                    </p>
                  </li>
                </ul>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
              >
                authSettings.costCalculator.premSupport.includedByDefault
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="Layout--horizontal StyledProps--main footer"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withRightIcon Button--variation Button--variation-primary"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          authSettings.costCalculator.next
        </span>
        <span
          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
          icon="chevron-right"
        >
          <svg
            data-icon="chevron-right"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              chevron-right
            </desc>
            <path
              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--padding-right-medium StyledProps--color StyledProps--color-grey700"
        >
          authSettings.costCalculator.payingToday
        </p>
        <div
          class="Layout--vertical StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall"
          >
            authSettings.plusTax
          </p>
          <p
            class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--font-size-xsmall"
          >
            authSettings.costCalculator.autoRenew
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
